final modifications in app before deploying on server.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>
-			Dummy Rails App
+			User Directory (Dummy Rails App)
     </title>	
     <%= stylesheet_link_tag "style", :cache => true -%>
 
